2005-05-07 Karsten Behrmann <BearPerson@gmx.net>
	* some files: add x86_64-specific configuration

2006-04-15 Karsten Behrmann <BearPerson@gmx.net>
	* gen-scripts/caster: fix small typoes with caster

2006-04-03 David Kowis <dkowis@shlrm.org>
	* iso/skeleton/usr/share/smgl.install/modules/diskStructure: Fixed
	spelling errors and such, changed a few sentences to make them make more
	sense. Fixed some bug that I cannot see due to no web browser...

2006-04-03 David Kowis <dkowis@shlrm.org>
	* iso/skeleton/etc/init.d/runlevels/%3/serialconsole: Added a script to
	automatically set up ttyS[0-9]'s for a headless install mechanism

2006-04-02 Christopher Dombroski <cdombroski@icanttype.org>
	* skeleton/usr/share/smgl.install/modules/diskStructure: added support
	for formating and mounting lvm partitions

2006-03-31 Karsten Behrmann <BearPerson@sourcemage.org>
	* caster: fixes with detection if a spell needs to be updated
	* nightlybuild.sh: fix typo in log naming

2006-03-30 Karsten Behrmann <BearPerson@sourcemage.org>
	* gen-scripts/{autoupdate.sh,nightlybuild.sh,sanitize-chroot.sh}:
	  add scripts for automated unattended updates/builds
	* data/iso.dirs, skeleton/etc/fstab: add tmpfs /dev/mapper for LVM

2006-03-28 Karsten Behrmann <BearPerson@sourcemage.org>
	* skeleton/etc/facilities/*: removed some unneeded files, added new
	  stuff to facilities

2006-03-20 Christopher Dombroski <cdombroski@icanttype.org>
	* skeleton/usr/share/smgl.install/modules/diskStructure: added lvm and
	device-mapper to si_queue after successful lv creation

2006-03-20 Christopher Dombroski <cdombroski@icanttype.org>
	* skeleton/usr/share/smgl.install/modules/diskStructure: add lvm menu
	support. TODO: add lvm and dm-tools to si-queue

2006-03-20 Karsten Behrmann <BearPerson@sourcemage.org>
	* installer.sh: add initial color stuff, clean up a bit

2006-03-04 Karsten Behrmann <BearPerson@sourcemage.org>
	* bootloader: also run mkofboot on ppc